# ciostream

./: CMakeLists.txt
Port/CMake/: port.c
Src/: CMakeLists.txt  cio.c  cio_buf.c  cio_ringbuffer.c  cio_wrap.c
Src/Include/: cio.h  cio_buf.h  cio_port.h  cio_ringbuffer.h  cio_wrap.h
Test/: CMakeLists.txt
Test/Assert/: main.c
Test/BufferedInputStream/: base.c  readline.c
Test/CioWrap/: main.c
Test/File/: file_reader.c
Test/RingBuffer/: main.c  restore.c
